fix(styles): update `.pagebody` flex-wrap property to correct layout wrapping behavior

--- a/website/public/styles/style.css
+++ b/website/public/styles/style.css
@@ -322,7 +322,7 @@ a {
 }
 .pagebody {
   display: flex;
-  flex-wrap: wrap-reverse;
+  flex-wrap: wrap;
 }
 aside {
   min-width: calc(var(--spacing) * 80);
